--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@tanstack/react-query": "^5.76.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.18",
+    "@js-joda/core": "^5.6.5",
+    "@js-joda/locale": "^4.15.1",
+    "@js-joda/locale_en-us": "^4.15.1",
+    "@js-joda/timezone": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
